Adjusts the flow for Java 17